[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Player/FireSpecial.gd" type="Script" id=1]
[ext_resource path="res://img/attacks/fire-special.png" type="Texture" id=2]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 78.3497
height = 54.6479

[node name="FireSpecial" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.878431 )
z_index = -1
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -100, -75, 200, 150 )

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AppearTween" type="Tween" parent="."]

[node name="DisappearTween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_FireSpecial_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FireSpecial_body_exited"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_DamageIntervalTimer_timeout"]
[connection signal="tween_completed" from="AppearTween" to="." method="_on_AppearTween_tween_completed"]
[connection signal="tween_completed" from="DisappearTween" to="." method="_on_DisappearTween_tween_completed"]
